--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -49,7 +49,7 @@ button {
 }
 
 button:hover {
-  background-color: var(--color-primary);
+  background-color: var(--color-light);
 }
 
 .text-error {
