--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -15,8 +15,22 @@
   --color-border: #dcdde1; /* Border color for dividing elements */
 }
 
+* {
+  box-sizing: border-box;
+}
+html,
 body {
-  background-color: var(--color-background);
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+main {
+  min-height: 100vh; /* 100% of the viewport height */
+  box-sizing: border-box; /* Include padding in the height calculation */
+}
+
+body {
+  background-color: linear-gradient(to right, var(--color-background), var(--color-light));
   color: var(--color-text);
   font-family: 'Open Sans', Arial, sans-serif;
 }
